--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,118 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Roboto&family=Silkscreen:wght@700&display=swap');
+
+/* ------- global ------- */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html {
-  background-color: rgb(243, 235, 225);
+  min-height: 100%;
+  position: relative;
 }
 
+body {
+  background-color: rgb(49, 48, 51);
+  line-height: 1.6;
+  /* footer support */
+  margin-bottom: 100px;
+}
+
+a {
+  color: aliceblue;
+}
+
+a:hover {
+  color: rgb(212, 212, 212);
+}
+
+.section-contents {
+  margin: auto;
+  max-width: 1000px;
+  padding: 20px;
+}
+
+/* ------- header ------ */
+header {
+  background-color: rgb(36, 35, 37);
+  display: flex;
+  justify-content: center;
+  padding: 50px 0px;
+}
+
+.title {
+  color: aliceblue;
+  font-family: 'Silkscreen', cursive;
+  font-size: 32px;
+}
+
+/* ---- main content ---- */
+main {
+  margin-top: 40px;
+}
+
+/* ---- calculator ---- */
 table {
-  border: 1px solid black;
+  background-color: rgb(85, 85, 85);
+  border-radius: 10px;
+  margin: auto;
+  padding: 10px;
 }
 
+input[type="button"] {
+  background-color: rgb(222, 224, 222);
+  border: none;
+  border-radius: 0px;
+  font-family: 'Fredoka One', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 20px 30px;
+  width: 100%;
+}
+
+input[type="button"]:hover {
+  background-color: rgb(239, 243, 239);
+}
+
+input[type="text"] {
+  border: none;
+  border-radius: 0px;
+  font-family: 'Fredoka One', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 20px;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+input[type="button"].operators {
+  background-color: rgb(173, 182, 182);
+}
+
+input[type="button"].equals {
+  background-color: rgb(145, 206, 155);
+}
+
+input[type="button"].clear {
+  background-color: rgb(206, 162, 145);
+}
+
+/* ------- footer ------- */
+footer {
+  align-items: center;
+  background-color: rgb(36, 35, 37);
+  bottom: 0;
+  color: aliceblue;
+  display: flex;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  gap: 10px;
+  justify-content: center;
+  left: 0;
+  padding: 10px;
+  position: absolute;
+  width: 100%;
+}
